# random-errors

./: CMakeLists.txt  README.md  error_code_generator.cpp  mc_dict.cpp
data/: error_codes.json
